--- a/_posts/2023-08-25-test.md
+++ b/_posts/2023-08-25-test.md
@@ -21,9 +21,11 @@ Certainly there is an allure to their statement that instead of healthtech compa
 
 A good piece of software is one that will handle the simple things like document capture, reconciliation, etc.  I agree wih the article that the first revolution will be non-clinical use cases.  If AI can help us get past that hurdle, then I think we have achieved productivity.
 
-## Marginal improvements are not worth the effort?
+## Marginal improvements are not worth the effort
 
-This statement was a bit provocative for me.  While I agree 
+I don't agree with this statement.  Having worked in high-tech technical roles over the last decade, I have seen the evolution of more advanced computing and its capabilities.  Having been part of an IBM Watson commercialization team, it is amazing how many computational advancements have been made to make cognitive computing more realistic.  Working in big data and cloud platforms have shown the ability to create immensely powerful solutions with seemingly limitless compute power.  One may even argue that Again, it goes back to the first idea of increased productivity.
+
+However, I do not advocate for this in healthcare.  Yes, cloud computing offers 
 
 ## Everyone has a world-class doctor in our pocket, right?
 
