--- a/_posts/2023-08-25-test.md
+++ b/_posts/2023-08-25-test.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Should AI replace the humble fax machine in the doctor's office?"
 author: sandy
 categories: [ AI, healthcare ]
-image: assets/images/16.jpg
+image: assets/images/2023-08/healthcare-is-keeping-the-fax-machine-alive.png
 ---
 VC firm Andressen Horowitz recently published an interesting [article](https://a16z.com/2023/08/02/where-will-ai-have-the-biggest-impact-healthcare/) on the new(est) AI technologies that will have a big impact on healthcare.  My first reaction was 'Haven't we seen this before?' and 'What makes things different *this* time around?'  While I see great potential, I remain cautious for AI to have as much impact in a field where human connection is vital.
 
@@ -13,11 +13,11 @@ I love new technology.  I love it because it makes me more productive.  As I was
 
 What's funny is that we are using new software all the time.  Everytime a new app comes out, we can easily download it and check it out.  Its integrated seamlessly into our everyday life; that is, it makes my life better.
 
-Healthcare seems to have gotten it backwards, as every new healthcare software solution promises more productivity, but instead does the opposite.  EHRs require more clicks for physicians.  For patients, my personal favorite (annoyance) is when I am asked to fill out insurance information in the EHR before my next appointment, even though I provided it at the previous appoitnment.  Better yet is when I am asked to fill out the same insurance information - on paper - in the doctor's office.  So, why bother filling out anything online?
+Healthcare seems to have gotten it backwards, as every new healthcare software solution promises more productivity, but instead does the opposite.  EHRs require more clicks for physicians.  For patients, my personal favorite (annoyance) is when I am asked to fill out insurance information in the EHR before my next appointment, even though I provided it at the previous appointment.  Better yet is when I am asked to fill out the same insurance information - on paper - in the doctor's office.  So, why bother filling out anything online?
 
 That's not productivity.
 
-Certainly there is an allure to their statement that instead of healthtech companies developing new software, they'll develop ”AI ‘people’ who are cheap, fast, cheerful and empathic.”  However, if I'm a patient, I want a human being to help me feel better.  The thought of a machine having perceived empathy discounts any reason to see a doctor at all.
+There is an allure to the statement that instead of healthtech companies developing new software, they'll develop ”AI ‘people’ who are cheap, fast, cheerful and empathic.”  However, if I'm a patient, I want a human being to help me feel better.  The thought of a machine having perceived empathy discounts any reason to see a doctor at all.
 
 A good piece of software is one that will handle the simple things like document capture, reconciliation, etc.  I agree wih the article that the first revolution will be non-clinical use cases.  If AI can help us get past that hurdle, then I think we have achieved productivity.
 
@@ -27,7 +27,7 @@ I don't agree with this statement.  Having worked in high-tech technical roles o
 
 Hence, replace the humble fax machine.
 
-Yet, I am wary about moving at that pace in healthcare.  On the one hand, cloud computing offers the benefit to process billions of data points for, say, genomic sequencing or population health management.  The article is correct in that AI will require more compute resources due to algorithm complexity and intensive compute required.  We could get more insights, more personalization, more productivity.  I think most people would want that.
+Yet, I am wary about moving at that pace in healthcare.  On the one hand, cloud computing offers the benefit to process billions of data points for, say, genomic sequencing or population health management.  The article is correct in that AI will require more compute resources due to algorithm complexity and compute resources required.  There would be more insights, more personalization, more productivity.  I think most people would want that.
 
 But there could also be a cloud outage, a malicious entity that wants to conduct a cybersecurity attack on a hospital, a patient record that ends up in the wrong hands.
 
@@ -36,4 +36,4 @@ THere's nothing wrong with marginal improvements.  Is it better to misdiagnose 1
 
 ## A world-class AI doctor in our pocket, right?
 
-Going back to my first point on 
+Going back to the first point of good technology increasing productivity, it would be awesome to have a doctor that knows everything at the touch of my fingertips.  I think that 
