--- a/_posts/2023-08-25-test.md
+++ b/_posts/2023-08-25-test.md
@@ -34,7 +34,7 @@ But there could also be a cloud outage, a malicious entity that wants to conduct
 THere's nothing wrong with marginal improvements.  Is it better to misdiagnose 1 patient or 1000 patients?  A small error allows time to investigate and course correct.  Of course, we should aim for technologies that can bring us more value, more quickly.  But at what cost to human life?
 
 
-## A world-class AI doctor for everyone, eveywhere
+## A world-class AI doctor for everyone, everywhere
 
 Going back to my first point of good technology that works seamlessly and increases productivity, it would be amazing to have a doctor that knows everything at my fingertips.  There are some models already out there that attempt this - Livongo by Teladoc as an example.  However, even if it has been covered insurance (so the service is at no cost), I haven't really used it unless out of necessity.  
 
