--- a/_posts/2023-08-25-test.md
+++ b/_posts/2023-08-25-test.md
@@ -11,23 +11,23 @@ VC firm Andressen Horowitz recently published an interesting [article](https://a
 
 I love new technology.  I love it because it makes me more productive.  As I was booking holiday travel recently, I realized how *easy* it has become to do things on my own - on my own time, in my own way.  No calling a travel agent to arrange a trip.  No taking out a paper map to get to the hotel.  I don't think you'll find too many people who will complain about the convenience this provides.
 
-What's funny is that we use new software all the time these days.  Everytime a new app comes out, we can easily download it and check it out.  Its integrated seamlessly into our everyday life; it makes life more simple.
+We use new software all the time these days.  Everytime a new app comes out, we can easily download it and check it out.  Its integrated seamlessly into our everyday life; it makes life more simple.
 
-Healthcare seems to have gotten it backwards, as every new healthcare software solution promises more productivity, but instead does the opposite.  EHRs require more clicks for physicians.  For patients, my personal favorite (annoyance) is when I am asked to fill out insurance information in the EHR before my next appointment, even though I provided it at the previous appointment.  Better yet is when I am asked to fill out the same insurance information - on paper - in the doctor's office.  So, why bother filling out anything online?
+Healthcare seems to have gotten it backwards, as every new healthcare software solution promises more productivity, but instead does the opposite.  EHRs require more clicks for physicians.  For patients, my personal favorite is when I am asked to fill out insurance information in the EHR before my next appointment, even though I provided it at the previous appointment.  So, why bother filling out anything online?
 
-That's not productivity.
+That's not productivity, that's a nuisance.
 
 The article states that instead of healthtech companies developing new software, they'll develop ”AI ‘people’ who are cheap, fast, cheerful and empathic.”  However, if I'm a patient, I want a human being to help me feel better.  The thought of a machine having empathy discounts any reason to see a doctor at all.
 
-A good piece of software is one that will handle the simple things like document capture, reconciliation, etc.  I agree wih the article that the first revolution will be non-clinical use cases.  If AI can help us get past that hurdle, then I think we will have achieved productivity.
+A good piece of software is one that will handle the simple things like document capture, reconciliation, etc.  I agree with the article that the first revolution will be non-clinical use cases.  If AI can help us get past that hurdle, then I think we will have achieved productivity.
 
 ## Marginal improvements are not worth the effort?
 
-I don't agree with this statement.  Having worked in high-tech technical roles over the last decade, I have seen the evolution of more advanced computing capabilities.  Working in big data and cloud platforms have shown the ability to create powerful solutions with seemingly limitless compute power.  I may even argue that cloud solutions and the infrastructure that powers them are bringing forth that 10x value that will absolutely displace outdated technologies.
+I don't agree with this statement.  Having worked in high-tech technical roles over the last decade, I have seen the evolution of more advanced computing capabilities.  Working in big data and cloud platforms have shown the ability to create powerful solutions with seemingly limitless compute power.  I may even argue that cloud solutions and the infrastructure that powers them are bringing forth the 10x value that will necessarily displace outdated technologies.
 
 Hence, replace the humble fax machine.
 
-Yet, I am wary about moving at that pace in healthcare.  On the one hand, cloud computing offers the benefit to process billions of data points for, say, genomic sequencing or population health management.  The article is correct in that AI will require more compute resources due to algorithm complexity and compute resources required.  There will be more insights, more personalization, more productivity.  
+Yet, I am wary about moving at that pace in healthcare.  On the one hand, cloud computing can process billions of data points for genomic sequencing or population health management.  The article is correct in that AI will require more compute resources due to algorithm complexity and compute resources required.  There will be more insights, more personalization, more productivity.  
 
 But there could also be a cloud outage, a malicious entity that wants to conduct a cybersecurity attack on a hospital, a patient record that ends up in the wrong hands.
 
@@ -36,12 +36,12 @@ There's nothing wrong with marginal improvements.  Is it better to misdiagnose 1
 
 ## A world-class AI doctor in your pocket: A pipe dream?
 
-Good technology works seamlessly and increases productivity.  Much like travel recommendation apps, it would be amazing to have a doctor that knows everything at the touch of a button.  There are some models already out there that attempt this - Livongo by Teladoc, as an example.  However, even if it has been covered insurance, I haven't really used it unless out of necessity.  
+Good technology works seamlessly and increases productivity.  Much like today's travel apps, it would be amazing to have a doctor that knows everything about me in the future.  There are some models already out there that attempt this - Livongo by Teladoc, as an example.  However, even if it has been covered insurance, I haven't really used it unless out of necessity.  
 
-I fear that an AI doctor might sit as one of those unused apps on my phone.  Most medical questions have gotten to the level that one can find a satisfactory answer via an internet search, coupled with an in-person visit to the doctor's office.  Would having a virtual AI doctor change things for the better?  In my mind, having a virtual doctor could not replace the dialogue I would like to have with a real human being.
+I fear that an AI doctor might sit as one of those unused apps on my phone.  Most people can find a satisfactory answer to a medical question via an internet search, coupled with an in-person visit to the doctor's office.  Would having an AI doctor change things for the better?  Perhaps.  In my mind, having a virtual doctor could not replace the dialogue I would like to have with a real human being.
 
 However, I like the idea of AI enabling earlier diagnosis - this is one use case that I believe will see increased adoption rapidly. 
 
 ## Conclusion
 
-I appreciated this insightful and hopeful article for the future of healthcare.  I'm sure there were more points that were not considered (maybe that will be for a later post).  Perhaps with this new wave of AI, there is a renewed commitment by people and processes to enable a better healthcare experience for all.  Finally, may we put that old fax machine to rest.
+I appreciated this insightful and hopeful article for the future of healthcare.  Perhaps with this new wave of AI, there is a renewed commitment by people and processes to enable a better healthcare experience for everyone.  Finally, may we put that old fax machine to rest.
