--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -5,7 +5,7 @@ author: sandy
 categories: [ ChatGPT, NLP, tutorial ]
 image: assets/images/2023-09/shutterstock_1025566351_license_resize.png
 ---
-In September, I had the opportunity to deliver the 2nd iteration of my tech talk on LLMs, LangChain, and SQL.  This time I had a chance to go a bit deeper into the demos I had set up.  As attendees were interested in the code samples, I have written the below tutorial.  
+In September, I had the opportunity to deliver the 2nd iteration of my talk on LLMs, LangChain, and SQL.  This time I had a chance to go a bit deeper into the demos I had set up.  I have written the below tutorial (including code) to accompany the demos shared in that talk.  
 
 This tutorial will cover 2 examples:
 
@@ -14,15 +14,6 @@ This tutorial will cover 2 examples:
 
 All resources can be found [here](https://github.com/slsu0424/pmc-patients).
 
-
-Make the patient's name Sally, age 43, Female.  Date of adverse event is 10/1/2019.  
-
-https://www.jointcommission.org/-/media/tjc/documents/standards/r3-reports/r3_19_anticoagulant_therapy_rev_final1.pdf?db=web&hash=7C6FA69A5DF9294B7BADF2B52C653FCA
-
-https://www.ncbi.nlm.nih.gov/books/NBK519025/?report=reader
-
-https://www.ncbi.nlm.nih.gov/books/NBK519025/
-
 ## What's the value of chatting with data?
 
 Healthcare is inudated with data - much of it in unstructured formats such as EHR notes, radiology images, to fitness wearables that generate real-time data.  Focusing on the former, there is a wealth of knowledge buried in pages upon pages of written text.  How can we access that one piece of crucial information?
@@ -30,6 +21,12 @@ Healthcare is inudated with data - much of it in unstructured formats such as EH
 Processing lengthy documents are nothing new for computers, as we could ingest documents into a cloud data store, manipulate the data to put it in a structured format, and make it available for downstream querying.  A search engine (i.e., NLP) could also be employed on top of this data, but could have mixed results.  For example, the user may have to be more explicit in their query statement.
 
 What if you could easily chat with this document using natural language?  What if the engine could understand your intent?
+
+https://www.jointcommission.org/-/media/tjc/documents/standards/r3-reports/r3_19_anticoagulant_therapy_rev_final1.pdf?db=web&hash=7C6FA69A5DF9294B7BADF2B52C653FCA
+
+https://www.ncbi.nlm.nih.gov/books/NBK519025/?report=reader
+
+https://www.ncbi.nlm.nih.gov/books/NBK519025/
 
 ## What is LangChain?
 
