--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -5,7 +5,7 @@ author: sandy
 categories: [ ChatGPT, NLP, tutorial ]
 image: assets/images/2023-10/shutterstock_2188258735_license_resize.png
 ---
-In September, I had the opportunity to present the 2nd iteration of my talk on LLMs, LangChain, and SQL.  This time I had a chance to go a bit deeper into the demos, and learn more about the technical concepts that were important to the audience.  I have written the below tutorial to accompany the demos and address the technical areas that were brought up.  
+In September, I had the opportunity to present the 2nd iteration of my talk on LLMs.  This time I had a chance to go a bit deeper into the demos that covered integrating LLMs with LangChain, and LLMs with SQL.  I have written this tutorial to accompany the demos.    
 
 This tutorial will cover 2 examples:
 
@@ -16,17 +16,13 @@ All resources can be found [here](https://github.com/slsu0424/pmc-patients).
 
 ## What's the value of chatting with data?
 
-Healthcare is inudated with data - much of it is in unstructured formats such as EHR notes, radiology images, even fitness wearables that generate real-time data.  Focusing on the former, there is a wealth of knowledge buried in pages upon pages of written text.  How can we access that one piece of crucial information?
+Healthcare is inundated with data - much of it is in unstructured formats such as EHR notes, radiology images, medical device readings, and even consumer fitness wearables.  Focusing on the former, there is a wealth of knowledge buried in pages upon pages of written text.  How can we access that one piece of crucial information?
 
-Processing lengthy documents are nothing new for computers, as we could ingest documents into a cloud data store, manipulate the data to put it in a structured format, and make it available for downstream querying.  A search engine could be deployed on top of the data, but could have mixed results.  For example, the user may have to be more explicit in their query statement.
+Processing lengthy documents are nothing new for computers, as we could ingest documents into a cloud data store and make it available for downstream querying.  A search engine could be deployed on top of the data, but could have mixed results.  For example, the user may have to be explicit in their query statement to retrieve the correct information.
 
 What if you could easily chat with this document using natural language?  What if the engine could better understand your intent?
 
 https://www.jointcommission.org/-/media/tjc/documents/standards/r3-reports/r3_19_anticoagulant_therapy_rev_final1.pdf?db=web&hash=7C6FA69A5DF9294B7BADF2B52C653FCA
-
-https://www.ncbi.nlm.nih.gov/books/NBK519025/?report=reader
-
-https://www.ncbi.nlm.nih.gov/books/NBK519025/
 
 ## What is LangChain?
 
@@ -36,12 +32,27 @@ Hence, we can "chain" an LLM to another component, such as a document.
 
 ## Example 1: Use LLMs with LangChain to chat with a healthcare document 
 
-We use OpenAI's ChatGPT (GPT-3.5) to generate a synthetic adverse events report for warfarin, which has a high-risk of adverse outcomes.  A snippet of the document is below:
+I used OpenAI's ChatGPT (GPT-3.5) to generate a synthetic adverse events report for warfarin.  I chose warfarin as it is in the class of drugs that have resulted in [serious adverse drug reactions](https://www.ncbi.nlm.nih.gov/books/NBK519025/).  Hence, there would be more internet information on warfarin that would be fed into the model.   
+
+These were the series of prompts I used to generate the final output:
+
+"Create an adverse event report related to warfarin.  Limit to 250 words."
+"Remove the Reporting Authority section"
+"expand to 500 words"
+"Include the Reporting Authority section"
+
+Note: LLMs can generate [different answers for the same prompt](https://ai.stackexchange.com/questions/32385/why-do-language-models-produce-different-outputs-for-same-prompt) due to the stochastic nature of predicting the next word.  For example, I tried the below prompt:
+
+"Create an adverse event report related to warfarin.  Limit to 500 words." 
+
+and got an entirely different [output]()
+
+A snippet of the document is below:
 
 >On October 20, 2023, at 09:30 AM, the patient, John Doe, experienced a significant adverse event related to the anticoagulant medication warfarin. Mr. Doe, a 68-year-old male with a history of atrial fibrillation, had been taking warfarin (5 mg daily) for the past three years as prescribed by his cardiologist.
 
 
-LangChain has many different document loaders.  Very easily, we will use PyPDFLoader to load this PDF document and create a vector representation:
+LangChain has many different document loaders.  Very easily, we use **PyPDFLoader** to load in the PDF document and create a vector representation:
 
 ```python
 # Load PDF document
@@ -53,7 +64,7 @@ index = VectorstoreIndexCreator().from_loaders([loaders])
 
 ## Vector Store
 
-According to LangChain, 
+One area that was a little fuzzy to me and the audience was how the vectore store operates in LangChain.  According to LangChain, 
 
 
 
