--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -52,7 +52,7 @@ A snippet of the document is below:
 >On October 20, 2023, at 09:30 AM, the patient, John Doe, experienced a significant adverse event related to the anticoagulant medication warfarin. Mr. Doe, a 68-year-old male with a history of atrial fibrillation, had been taking warfarin (5 mg daily) for the past three years as prescribed by his cardiologist.
 
 
-LangChain has many different document loaders.  Very easily, we use **PyPDFLoader** to load in the PDF document and create a vector representation:
+LangChain has many different document loaders.  Very easily, we can use **PyPDFLoader** to load in the PDF document and create a vector representation:
 
 ```python
 # Load PDF document
@@ -64,7 +64,8 @@ index = VectorstoreIndexCreator().from_loaders([loaders])
 
 ## Vector Store
 
-One area that was a little fuzzy to me and the audience was how the vectore store operates in LangChain.  According to LangChain, 
+According to LangChain, the [VectorstoreIndexCreator](https://api.python.langchain.com/en/latest/indexes/langchain.indexes.vectorstore.VectorstoreIndexCreator.html) class creates a vectorestore index from loaders.  By vectorstore index, this means 
+
 
 
 
