--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -5,7 +5,7 @@ author: sandy
 categories: [ ChatGPT, NLP, tutorial ]
 image: assets/images/2023-10/shutterstock_2188258735_license_resize.png
 ---
-In September, I had the opportunity to present the 2nd iteration of my talk on Large Language Models (LLMs).  This time I had a chance to go a bit deeper into the demos that covered integrating LLMs with LangChain, and LLMs with SQL.  I have written this tutorial to accompany these demos.    
+In September, I had the opportunity to present the 2nd iteration of my talk on Large Language Models (LLMs).  This time I had a chance to go a bit deeper into the demos that covered integrating LLMs with LangChain, and LLMs with SQL.  I have written this tutorial to accompany those demos.    
 
 This tutorial will cover 2 examples:
 
@@ -16,7 +16,7 @@ All resources can be found [here](https://github.com/slsu0424/pmc-patients).
 
 ## What's the value of chatting with data?
 
-Healthcare is inundated with data - much of it is in unstructured formats such as EHR notes, radiology images, medical device readings, and even consumer fitness wearables.  Focusing on the former, there is a wealth of knowledge buried in pages upon pages of text.  From a clinical perspective, how can relevant information be retrieved quickly without explicit programming?
+Healthcare is inundated with data - much of it found in unstructured EHR notes, radiology images, medical device readings, etc.  Focusing on the former, there is a wealth of knowledge buried in pages pages of text.  From a clinical perspective, how can relevant information be retrieved quickly without explicit programming?
 
 While NLP techniques have been used [since the 1950s](https://en.wikipedia.org/wiki/Natural_language_processing) to process and generate text, the ability to generate text with human-like accuracy is extremely [powerful](https://news.mit.edu/2023/ai-models-astrocytes-role-brain-0815).  
 
@@ -48,7 +48,7 @@ A snippet of the document is below:
 
 "Create an adverse event report related to warfarin.  Limit to 500 words." 
 
-which returned an entirely different [output]().
+which returned an very different [output]().
 
 #### 2. Use LangChain to load documents into a vector store
 
