--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -56,7 +56,21 @@ Langchain is a framework for developing applications powered by LLMs.  It was la
 
 Hence, we can "chain" an LLM to another component, such as a document.
 
-LangChain has many different document loaders.  Very easily, we can use **PyPDFLoader** to load in the PDF document and create a vector representation:
+LangChain follows these standard steps for creating a Q&A application using text:
+
+1. Load documents
+2. Split documents into chunks
+3. Create embedding vectors from chunks
+4. Store vectors in vector database
+5. Retrieve relevant documents from database
+6. Pass relevant documents to LLM
+7. LLM generates final answer
+
+These workflows help illustrate the steps above:
+
+[]!
+
+LangChain has many different methods to load documents.  We easily use the **PyPDFLoader** to load in the PDF document and create a vector representation using the [**VectorStoreIndexCreator**](https://api.python.langchain.com/en/latest/indexes/langchain.indexes.vectorstore.VectorstoreIndexCreator.html):
 
 ```python
 # Load PDF document
@@ -66,10 +80,16 @@ loaders = PyPDFLoader('/Users/sandysu/Documents/GitHub/OpenAI/docs/ADR11.pdf')
 index = VectorstoreIndexCreator().from_loaders([loaders])
 ```
 
-According to LangChain, the class [VectorstoreIndexCreator](https://api.python.langchain.com/en/latest/indexes/langchain.indexes.vectorstore.VectorstoreIndexCreator.html) creates a vectorestore index from loaders.  By vectorstore index, this means 
+This [article](https://medium.com/@kbdhunga/enhancing-conversational-ai-the-power-of-langchains-question-answer-framework-4974e1cab3cf) gives a nice explanation of the VectorStoreIndexCreator class.  Basically, this class handles steps 2-4 above(chunking, embedding, and storage). 
+
+These are the defaults in the class:
+
+- Split documents into chunks - [RecursiveCharacterTextSplitter()](https://api.python.langchain.com/en/latest/text_splitter/langchain.text_splitter.RecursiveCharacterTextSplitter.html) - splits text by looking at characters recursively
+- Create embedding vectors from chunks - [OpenAIEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.openai.OpenAIEmbeddings.html) - generates embeddings using the OpenAI API
+- Store vectors in vector database - [Chroma](https://www.trychroma.com/) - an open-source vector store
 
 
-https://medium.com/@kbdhunga/enhancing-conversational-ai-the-power-of-langchains-question-answer-framework-4974e1cab3cf
+https://www.researchgate.net/publication/308158087_Chunking_mechanisms_and_learning
 
 
 ## Example 2: Use LLMs with SQL to chat with the MIMIC-III database
