--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -31,17 +31,11 @@ A snippet of the document is below:
 
 >On October 20, 2023, at 09:30 AM, the patient, John Doe, experienced a significant adverse event related to the anticoagulant medication warfarin. Mr. Doe, a 68-year-old male with a history of atrial fibrillation, had been taking warfarin (5 mg daily) for the past three years as prescribed by his cardiologist.
 
-*Note:* LLMs can generate [different answers for the same prompt](https://ai.stackexchange.com/questions/32385/why-do-language-models-produce-different-outputs-for-same-prompt) due to the stochastic nature of predicting the next word.  For example, I tried this single prompt:
-
-"Create an adverse event report related to warfarin.  Limit to 500 words." 
-
-which returned a very different [output]().
-
 #### Q&A application overview
 
 This [blogpost](https://github.com/hwchase17/chat-your-data/blob/master/blogpost.md) by LangChain's founder provides a good overview for building a text-based Q&A application.  
 
-The main steps are:
+The main steps include:
 
 1. Load documents
 2. Split documents into chunks
@@ -55,11 +49,11 @@ These 2 workflows help illustrate the steps above:
 
 Ingest Data:
 
-[]!
+[langchain1]!(/assets/images/2023-10/langchain1.png)
 
 Query Data:
 
-[]!
+[langchain2]!(/assets/images/2023-10/langchain2.png)
 
 
 #### Use LangChain to load documents into a vector store
