--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -49,11 +49,11 @@ These 2 workflows help illustrate the steps above:
 
 Ingest Data:
 
-[langchain1]!(/assets/images/2023-10/langchain1.png)
+![langchain1](/assets/images/2023-10/langchain1.png)
 
 Query Data:
 
-[langchain2]!(/assets/images/2023-10/langchain2.png)
+![langchain2](/assets/images/2023-10/langchain2.png)
 
 
 #### Use LangChain to load documents into a vector store
