--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -33,7 +33,7 @@ A snippet of the document is below:
 
 #### Q&A application overview
 
-This [blogpost](https://github.com/hwchase17/chat-your-data/blob/master/blogpost.md) by LangChain's founder provides a good overview for building a text-based Q&A application.  
+This [blogpost](https://github.com/hwchase17/chat-your-data/blob/master/blogpost.md) by LangChain's founder, Harrison Chase, provides a good overview for building a text-based Q&A application.  
 
 The main steps include:
 
@@ -81,6 +81,8 @@ The VectorStoreIndexCreator handles steps 2-4 above (chunking, embedding, and st
 #### Query the vector store
 
 The [query()](https://api.python.langchain.com/en/latest/_modules/langchain/indexes/vectorstore.html#VectorStoreIndexWrapper.query) method is used to interact with the vector store.  Thus, when a user passes in a question, the store is queried to retrieve the data that is 'most similar' to the embedded query.
+
+![langchain3](/assets/images/2023-10/langchain3.png)
 
 https://python.langchain.com/docs/modules/data_connection/vectorstores/#:~:text=One%20of%20the%20most%20common%20ways%20to%20store,that%20are%20%27most%20similar%27%20to%20the%20embedded%20query.
 
