--- a/_posts/2023-10-24-test.md
+++ b/_posts/2023-10-24-test.md
@@ -72,7 +72,7 @@ loaders = PyPDFLoader('/Users/sandysu/Documents/GitHub/OpenAI/docs/ADR11.pdf')
 index = VectorstoreIndexCreator().from_loaders([loaders])
 ```
 
-The VectorStoreIndexCreator handles steps 2-4 above (chunking, embedding, and storage).  This [article](https://medium.com/@kbdhunga/enhancing-conversational-ai-the-power-of-langchains-question-answer-framework-4974e1cab3cf) provides a bit more detail about the class, including customization.  Some default settings to note are: 
+The VectorStoreIndexCreator handles steps 2-4 above (chunking, embedding, and storage).  This [article](https://medium.com/@kbdhunga/enhancing-conversational-ai-the-power-of-langchains-question-answer-framework-4974e1cab3cf) provides more details about the class, including customization.  Some default settings to note are: 
 
 - Chunking - uses [RecursiveCharacterTextSplitter()](https://api.python.langchain.com/en/latest/text_splitter/langchain.text_splitter.RecursiveCharacterTextSplitter.html) to divide text at specific characters
 - Embedding - [OpenAIEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.openai.OpenAIEmbeddings.html) is used to generates embeddings
@@ -80,7 +80,7 @@ The VectorStoreIndexCreator handles steps 2-4 above (chunking, embedding, and st
 
 #### Query the vector store
 
-The [query()](https://api.python.langchain.com/en/latest/_modules/langchain/indexes/vectorstore.html#VectorStoreIndexWrapper.query) method is used to interact with the vector store.  Thus, when a user passes in a question, the store is queried to retrieve the data that is 'most similar' to the embedded query.
+The query()](https://api.python.langchain.com/en/latest/_modules/langchain/indexes/vectorstore.html#VectorStoreIndexWrapper.query) method is used to interact with the vector store.  Thus, when a user passes in a question, the store is queried to retrieve the data that is 'most similar' to the embedded query.
 
 ![langchain3](/assets/images/2023-10/langchain3.png)
 
