--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -13,28 +13,40 @@ Its a New Year, and with it, we embark on the yearly tradition of resolutions.  
 
 #### Poor health outcomes still plague the US
 
-According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202021), in 2021, the US spent over $4,000 more per capita on healthcare than the next highest spending country:
+According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202021), in 2021, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country:
 
-[insert image]
+![PC-KFF](/assets/images/2024-01/life-expectancy-and-per-capita-healthcare-spending-ppp-adjusted-2022.png)
 
 
-I am not a health economist, but I am challenging myself to have a better understanding of the economics and policies that shape the US healthcare today.  This comes from my own experiences as a patient navigating the healthcare system, and as a technologist specialized in bringing data and systems together.  
+If we look more deeply into *whom* is consuming the majority of US healthcare services, greater than 50% of the overall healthcare spend is attributed to people 55 and up.  
+ 
 
-reorienting myself to the complexities of systems that still don't talk to each other.
+When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes fare worse than our neighbors.
 
-A few months ago, the [Economist](https://www.economist.com/business/2023/10/08/who-profits-most-from-americas-baffling-health-care-system) provided some more analysis into the recent cost drivers of the US healthcare system, focusing on 3rd party brokers (i.e., insurance) vs. pharmaceutical companies and health systems.  
+So what gives?  
+
+I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  As much as I love technology, I am increasingly aware of the shortfalls encountered in truly revolutionizing healthcare delivery.  This comes from my own experiences as a patient, and as a technologist interested in leveraging data for better patient outcomes.  
+
+#### 2023 was a big year for healthcare verticalization
+
+2023 was a big year for the tech world (generative AI), but it was also a big year for healthcare consolidation.  A few months ago, the [Economist](https://www.economist.com/business/2023/10/08/who-profits-most-from-americas-baffling-health-care-system) provided some interesting analysis into the recent cost drivers of the US healthcare system, focusing on 3rd party brokers (i.e., insurance) vs. pharmaceutical companies and health systems.  
+
+Most of this activity involved verticalization by health insurance companies.  For example, 
 
 The questions remain: Will costs go up/down?  Will health outcomes improve?  What role does technology play?
 
-#### 2023 was a big year for consolidation
+#### The role of technology
 
-2023 was not only a big year for new technology (generative AI), it was also a big year for healthcare mergers.  According to the Economist, most of this activity involved verticalization by health insurance companies.  For example...
-
+Over time, I've come to believe to 
 
 > 
 
-ß
-#### GenAI is a hit, but has limited use cases in healthcare 
+#### health outcomes may or may not improve
+
+
+
+
+#### GenAI is a hit, but its value remains to be seen in healthcare 
 
 One thing to note is that LLMs are limited by their tendency to [hallucinate](https://spectrum.ieee.org/ai-hallucination).  It means that a generative AI system can output novel text that sound completely plausible, but are factually incorrect.  Currently, there are more focused LLMs trained on the medical domain that are under development, with the idea that narrower models may mitigate these hallucinations.
 
@@ -44,3 +56,5 @@ Despite these limitations, I agree with the authors that LLMs still have value i
 * In complex clinical cases, employing human reasoning and intuition can mean life or death for a patient 
 
 Lastly, I would argue that most physicians aim to establish a trust relationship with their patients, mutually working towards the best possible outcome.  This type of relationship fails to exist between a human and a computer.
+
+https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2774129
