--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -13,19 +13,21 @@ Its a New Year, and with it, we embark on the yearly tradition of resolutions.  
 
 #### Poor health outcomes still plague the US
 
-According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202021), in 2021, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country:
+According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany):
 
 ![PC-KFF](/assets/images/2024-01/life-expectancy-and-per-capita-healthcare-spending-ppp-adjusted-2022.png)
 
 
-If we look more deeply into *whom* is consuming the majority of US healthcare services, greater than 50% of the overall healthcare spend is attributed to people 55 and up.  
- 
+If we look more deeply into *whom* is consuming the majority of US healthcare services, a 2021 report showed that greater than 50% of the overall healthcare spend is attributed to people 55 and up:
 
-When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes fare worse than our neighbors.
+![PC-KFF2](/assets/images/2024-01/share-of-total-population-and-total-health-spending-by-age-group-2021.png)
 
-So what gives?  
 
-I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  As much as I love technology, I am increasingly aware of the shortfalls encountered in truly revolutionizing healthcare delivery.  This comes from my own experiences as a patient, and as a technologist interested in leveraging data for better patient outcomes.  
+When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes still fare worse than our neighbors.
+
+So what gives?
+
+I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  I am increasingly aware of the shortfalls encountered in truly revolutionizing healthcare delivery, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist interested in leveraging data for better patient outcomes.  
 
 #### 2023 was a big year for healthcare verticalization
 
