--- a/_archive/_posts_backlog/2024-01-16-test.md
+++ b/_archive/_posts_backlog/2024-01-16-test.md
@@ -9,19 +9,11 @@ featured: true
 hidden: false
 ---
 
-For 2024, I'm going to be switching up some of my posts to focus a bit more on the healthcare industry and current trends.  2023 was a fun time exploring the newest toy in tech (generative AI), but it also came with its share of optimists and pessimists/realists when talking tech in healthcare.  I thought it warranted deeper inspection beyond the technology itself, which I will attempt to explore from various angles in separate posts.
+Its a New Year, and with it, we embark on the yearly tradition of resolutions.  What is top of mind for US adults in 2024?  According to a [Forbes](https://www.forbes.com/health/mind/new-years-resolutions-statistics/) survey of 1000 people, improving fitness is the #1 resolution (48%).  Rounding out the top 5 resolutions, 3 were related to physical/mental health.  Yet, the US continues to grow its healthcare costs with worse health outcomes than every other industrialized nation.
 
 #### Poor health outcomes still plague the US
 
-The current tech buzz reminds me of the time almost a decade ago when IBM Watson Health aimed to [transform healthcare](https://www.statnews.com/2021/03/10/ibm-watson-health-sale-lessons/), to much fanfare and eventual sell-off.
-
-Have we gotten better since that time?
-
-According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US life expectancy at birth still lagged behind its comparable country counterparts:
-
-
-
-Now let's look at health expenditures: In 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany):
+According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany):
 
 ![PC-KFF](/assets/images/2024-01/life-expectancy-and-per-capita-healthcare-spending-ppp-adjusted-2022.png)
 
@@ -30,9 +22,8 @@ If we look more deeply into *whom* is consuming the majority of US healthcare se
 
 ![PC-KFF2](/assets/images/2024-01/share-of-total-population-and-total-health-spending-by-age-group-2021.png)
 
-When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes still fare worse than our neighbors.
 
-So to answer my earlier question, I would say no, we have not gotten better over the last decade.
+When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes still fare worse than our neighbors.
 
 So what gives?
 
