--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -19,7 +19,7 @@ Have we gotten better since that time?
 
 According to the [Peterson Center-KFF Health System Tracker](https://www.healthsystemtracker.org/chart-collection/u-s-life-expectancy-compare-countries/#Life%20expectancy%20and%20per%20capita%20healthcare%20spending%20(PPP%20adjusted),%202022), in 2022, the US life expectancy at birth still lagged behind its comparable country counterparts:
 
-
+![PC-KFF](/assets/images/2024-01/life-expectancy-at-birth-in-years-1980-2022.png)
 
 Now let's look at health expenditures: In 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany):
 
