--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -21,7 +21,7 @@ According to the [Peterson Center-KFF Health System Tracker](https://www.healths
 
 ![PC-KFF](/assets/images/2024-01/life-expectancy-at-birth-in-years-1980-2022.png)
 
-Now let's look at health expenditures: In 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany):
+Now let's look at health expenditures: In 2022, the US spent over $4,000 more per capita (per person) on healthcare than the next highest spending country (Germany).  Note that the US life expectancy still ranks the lowest amongst comparable countries.
 
 ![PC-KFF](/assets/images/2024-01/life-expectancy-and-per-capita-healthcare-spending-ppp-adjusted-2022.png)
 
@@ -30,13 +30,13 @@ If we look more deeply into *whom* is consuming the majority of US healthcare se
 
 ![PC-KFF2](/assets/images/2024-01/share-of-total-population-and-total-health-spending-by-age-group-2021.png)
 
-When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes still fare worse than our neighbors.
+When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces ([the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers), our health outcomes still fare worse than our peer countries.
 
-So to answer my earlier question, I would say no, we have not gotten better over the last decade.
+To answer my earlier question, I would say no, we have not gotten better over the last decade.
 
 So what gives?
 
-I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  I am increasingly aware of the shortfalls encountered in truly revolutionizing healthcare delivery, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist interested in leveraging data for better patient outcomes.  
+I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  I am increasingly aware of the shortfalls encountered in fixing healthcare, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist specialized in connecting systems and data for better patient outcomes.  
 
 #### 2023 was a big year for healthcare verticalization
 
