--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -32,11 +32,11 @@ If we look more deeply into *whom* is consuming the majority of US healthcare se
 
 When we look at these stats compared to other countries, I found it striking that despite all the technological advances that our economy produces - [the US is #1](https://finance.yahoo.com/news/15-countries-produce-best-software-222422955.html) when it comes to producing software engineers - US health outcomes still fare worse than our neighbors.
 
-The above data suggests a bleak answer to my question: The US is progressing very little, perhaps even backwards in attempting to transform healthcare.
+The above data suggests a bleak answer to my question: The US is progressing very little, perhaps even going backwards in attempting to transform healthcare.
 
 So what gives?
 
-I am not a health economist, but I am reorienting myself to understand the economics and policies that shape our healthcare system today.  I am increasingly aware of the shortfalls encountered in fixing healthcare, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist specialized in systems and data.
+I am not a health economist, but I am reorienting myself to understand the economics and policies that shape today's healthcare system.  I am increasingly aware of the shortfalls encountered in fixing healthcare, and have tempered my expectations of what technology can/cannot do.  This comes from my own experiences as a patient, conversations with health providers, and as a technologist specialized in systems and data.
 
 #### 2023 was another big year for healthcare verticalization
 
@@ -46,19 +46,19 @@ Most of this activity involved verticalization by such companies.  For example, 
 
 [image]
 
-Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon's completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of some of these deals.
+Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of some of these deals.
 
 This surely has to be a good thing for all healthcare stakeholders, right?
 
 Industry executives think so, with the idea that verticalization will bring all important aspects of medical care - physicians, pharmacy, insurance, and IT systems - under one roof.  I certainly like that idea, as the current setup of running around between these entities is beyond frustrating for everyone involved.  This is supported by the Commonwealth Fund's [report](https://www.commonwealthfund.org/publications/issue-briefs/2023/oct/high-us-health-care-spending-where-is-it-all-going), where administrative costs account for 30% of excess US healthcare spend: 
 
-[image]
+![CMW](/assets/images/2024-01/high_us_health_care_spending_where_is_it_all_going_exhibit_1.png)
 
-But will this hurt patients in the end?  The Economist suggests that there could be unfair competition due to consolidation.  As an employee of a big conglomerate, physicians may be pushed towards offering cheaper treatments for patients.  All the while, these healthcare intermediaries will continue to be profitable - unusually so.  As a lot of this has not come to fruition yet, so it will be interesting to watch how this unfolds.  
+But will this hurt patients in the end?  The Economist suggests that there could be unfair competition due to consolidation.  All the while, these healthcare intermediaries have been producing excess returns greater than the S&P 500.  Much of this has not come to fruition yet, so I will be interested to see if this strategy pays off.  
 
 #### The role of technology
 
-With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  Some organizations 
+With such consolidation, I am a proponent that the right combination of market forces and emerging technologies can create more efficiencies.  One of the earliest benefits for technologies such as LLMs is the ability to summarize data quickly.  This is a big need in healthcare today, especially for EHRs.  I would agree with Some organizations 
 
 > 
 
