--- a/_posts/2024-01-16-test.md
+++ b/_posts/2024-01-16-test.md
@@ -44,7 +44,7 @@ I am not a health economist, but I am reorienting myself to understand the econo
 
 Most of this activity involved verticalization by such companies.  For example, over the last decade, there has been progressive M&A activity by big names such as CVS Health, Cigna, and UnitedHealth.  These transactions have amounted to over $300B across more than 130 deals:
 
-[Economist](/assets/images/2024-01/economist.png)
+![Economist](/assets/images/2024-01/economist.png)
 
 Perhaps most striking to me was that these 3rd party players were not just buying up their competitors - CVS buying Aetna (insurer/insurer), Cigna buying Express Scripts (insurer/PBM) - they were also going buying up healthcare providers.  In February 2023, Optum quietly [purchased](https://rockinst.org/blog/a-mid-year-update-on-2023-healthcare-trends/) Crystal Run Healthcare, a 400-person physician group in New York.  In April 2023, California-based Kaiser [acquired](https://www.forbes.com/sites/robertpearl/2023/05/31/what-kaisers-acquisition-of-geisinger-means-for-us-all/?sh=63d95c665796) Geisinger, a Pennslyvania-based health system.  While financial terms of these deals were not disclosed, Amazon completed its $3.9B [acquisition](https://www.forbes.com/sites/brucejapsen/2023/02/22/amazon-achieves-closing-of-one-medical-deal-officially-entering-doctor-clinic-business/?sh=28ba5b7f747b) of One Medical in February 2023, giving some insight into the magnitude and importance of some of these deals.
 
@@ -52,7 +52,7 @@ This surely has to be a good thing for all healthcare stakeholders, right?
 
 Industry executives think so, with the idea that verticalization will bring all important aspects of medical care - physicians, pharmacy, insurance, and IT systems - under one roof.  I certainly like that idea, as the current setup of running around between these entities is beyond frustrating for everyone involved.  This is supported by the Commonwealth Fund's [report](https://www.commonwealthfund.org/publications/issue-briefs/2023/oct/high-us-health-care-spending-where-is-it-all-going), where administrative costs account for 30% of excess US healthcare spend: 
 
-![Commonwealth](/assets/images/2024-01/high_us_health_care_spending_where_is_it_all_going_exhibit_1.png)
+![Commonwealth](/assets/images/2024-01/high_us_health_care_spending_where_is_it_all_going_exhibit.png)
 
 But will this hurt patients in the end?  The Economist suggests that there could be unfair competition due to consolidation.  All the while, these healthcare intermediaries have been producing excess returns greater than the S&P 500.  Much of this has not come to fruition yet, so I will be interested to see if this strategy pays off.  
 
